--- a/slides/custom.scss
+++ b/slides/custom.scss
@@ -15,3 +15,8 @@ $presentation-h2-font-size: 1.6em;
   border-left: 3px solid $text-muted;
   padding-left: 0.5em;
 }*/
+
+.console-output {
+  color: green;
+  background-color: black;
+}
