highlight fragments for collaborative workflow slide

--- a/slides/custom.scss
+++ b/slides/custom.scss
@@ -21,6 +21,6 @@ $presentation-h2-font-size: 1.6em;
   padding: 10px 0px 80px 20px;
 }
 
-.extrapad p {
-  color: #eee8d5 !important;
+.reveal h2 min {
+  padding: 10px 0px 80px 20px;
 }
